# ednoda-capstone-data

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/ednoda_snapshot/: ednoda_snapshot_cleaned.csv  education_nodes.csv  lesson_nodes.csv  lessons.csv  node_analyses.csv  textbook_nodes.csv  textbooks.csv
docs/: data_dictionary.md  dataset_acquisition.md  future_dataset_candidates.md  ingestion_guide.md  licensing_notes.md  modeling_handoff.md  onboarding.md  production_snapshot_ingestion.md
docs/.ipynb_checkpoints/: data_dictionary-checkpoint.md
notebooks/: 01_day1_data_tour.ipynb
notebooks/.ipynb_checkpoints/: 01_day1_data_tour-checkpoint.ipynb
scripts/: build_all.py  describe_processed_data.py  download_cefr_sp.py  download_cefrj.py  enrich_sentence_features.py  fetch_public_data.py  ingest_cefr_sp.py  ingest_cefrj_grammar.py  ingest_cefrj_vocabulary.py  ingest_ednoda_snapshot.py  merge_processed_tables.py  preflight_check.py  prepare_ednoda_snapshot_from_exports.py  validate_processed_tables.py
src/ednoda_capstone_data/: __init__.py  acquisition.py  features.py  ingest.py  io_utils.py  normalize.py  schemas.py  sources.py  validate.py
tests/: test_features.py  test_ingest_smoke.py  test_normalize.py  test_schema.py
tests/fixtures/cefr_sp/: train_sample.csv
tests/fixtures/cefrj/: cefrj-grammar-profile-20180315.csv  cefrj-vocabulary-profile-1.5.csv  octanove-vocabulary-profile-c1c2-1.0.csv
tests/fixtures/ednoda_snapshot/: ednoda_sample.csv
